# voxelization_lib

./: .gitignore  ASSIMP_INTEGRATION.md  CMakeLists.txt  GPU_PERFORMANCE_ANALYSIS.md  README.md  REFACTORING_SUMMARY.md  build.sh  final_review_gate.py
docs/: GPU_CPUbenmark_from_chatgpt.md  GPU_OPTIMIZATION_STRATEGIES.md
examples/: BENCHMARK_README.md  advanced_benchmark.cpp  complex_mesh_test.cpp  example_usage.cpp  forceflow_example.cpp  gpu_optimization_benchmark.cpp  gpu_performance_analysis.cpp  mesh_voxelization_example.cpp  performance_benchmark.cpp
include/: cpu_voxelization.hpp  forceflow_voxelizer.hpp  gpu_voxelization.hpp  gpu_voxelization_optimized.hpp  gpu_voxelization_optimized_impl.hpp  hybrid_voxelization.hpp  mesh_loader.hpp  spatial_entities.hpp  voxelization_algorithms.hpp  voxelization_base.hpp  voxelization_factory.hpp
src/: cpu_voxelization.cpp  forceflow_voxelizer.cu  gpu_voxelization.cpp  gpu_voxelization.cu  gpu_voxelization_backup.cpp  gpu_voxelization_optimized.cu  gpu_voxelization_optimized_impl.cpp  gpu_voxelization_simple.cpp  hybrid_voxelization.cpp  mesh_loader.cpp  spatial_entities.cpp  voxelization_algorithms.cpp  voxelization_factory.cpp
test/: test_voxelization.cpp
